[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Cell.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/GatoTable.gd" type="Script" id=2]

[node name="GatoTable" type="GridContainer"]
margin_right = 500.0
margin_bottom = 500.0
rect_min_size = Vector2( 500, 500 )
columns = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
Cell = ExtResource( 1 )

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DrawTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="DrawTimer" to="." method="emitDraw"]
